Fixing logging machines failed data